# Team-Tech--BlueBitHackathon

./: .mcp.json  BACKEND_INSTRUCTIONS.md  FRONTEND_INSTRUCTIONS.MD  PLAN.md  README.MD  package-lock.json  run-all.bat  run-all.sh
gyaansetu/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json
gyaansetu-api/: .env  .env.example  _check_db.py  _check_db2.py  _check_flow.py  _check_insert.py  _run_migration.py  pyproject.toml  tmp_run_sql.py
gyaansetu-api/app/: config.py  database.py  main.py
gyaansetu-api/app/core/: deps.py  exceptions.py  responses.py  security.py
gyaansetu-api/app/models/: assignment.py  base.py  classroom.py  report.py  score.py  submission.py
gyaansetu-api/app/routers/: assignments.py  auth.py  behavior.py  classrooms.py  dashboard.py  reactive.py  reports.py  similarity.py  snapshots.py  socratic.py  students.py  submissions.py  upload.py
gyaansetu-api/app/services/: assignment_service.py  base.py  behavior_service.py  classroom_service.py  detection_service.py  report_service.py  socratic_service.py  submission_service.py
gyaansetu-api/supabase/migrations/: 01_classroom_assignments.sql  02_student_assignments.sql  03_add_replay_log_to_submissions.sql  03_reactive_mode.sql  04_reactive_schema_sync.sql  04_submission_snapshots.sql  05_add_batch_ids_to_classroom_assignments.sql  05_proactive_mode_schema.sql  06_socratic_timer.sql  07_socratic_followup.sql
gyaansetu-api/tests/: conftest.py  test_submissions.py
gyaansetu-extractor/: main.py  package-lock.json  requirements.txt
gyaansetu/app/: fonts.ts  globals.css  (+2 more)
(+65 files in other folders)
