[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gyaansetu-api"
version = "1.0.0"
description = "GYAANSETU — Academic Integrity Detection API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.7.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[tool.hatch.build.targets.wheel]
# include the package directory which contains the Python code
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
